Update samples and documentation