@@ -1,18 +1,20 @@
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.blackhillsoftware.gimapi.SmpeQuery;
-import com.blackhillsoftware.gimapi.Zone;
+import com.blackhillsoftware.gimapi.*;
+import com.blackhillsoftware.gimapi.entry.*;
 import com.blackhillsoftware.gimapi.subentry.Smrtdata;
 import com.fasterxml.jackson.annotation.JsonInclude;
-import tools.jackson.databind.ObjectMapper;
-import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.*;
 import tools.jackson.databind.cfg.DateTimeFeature;
 import tools.jackson.databind.json.JsonMapper;
 
+/**
+ * Report hold data for sysmods installed after a specified date
+ */
 public class Holddata2Json
 {
+    // Jackson ObjectMapper for writing JSON
     private static final ObjectMapper MAPPER = JsonMapper.builder()
             .disable(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS)
             .enable(SerializationFeature.INDENT_OUTPUT)
@@ -30,16 +32,20 @@ public class Holddata2Json
 
         String csi = args[0];
         String zone = args[1];
-        LocalDate since = LocalDate.parse(args[2]);
+        LocalDate date = LocalDate.parse(args[2]);
 
+        // get the sysmods installed after the specified date
+        // and build a list of names
         var sysmods = SmpeQuery.csi(csi)
                 .zone(zone)
-                .installedAfter(since)
+                .installedAfter(date)
                 .listSysmod()
                 .stream()
-                .map(entry -> entry.entryname())
-                .collect(Collectors.toList());
+                .map(Sysmod::entryname)
+                .toList();
 
+        // Get the holddata for the list of sysmods and
+        // extract the information to be included in JSON
         List<HolddataEntry> holddata = SmpeQuery.csi(csi)
                 .zone(Zone.GLOBAL)
                 .ename(sysmods)
@@ -58,7 +64,9 @@ public class Holddata2Json
                         hold.smrtdata()))
                 .toList();
 
-        var report = new HolddataReport(csi, zone, since, holddata);
+        // Wrap it in an object recording the csi, zone, date
+        var report = new HolddataReport(csi, zone, date, holddata);
+        // generate and write the JSON
         System.out.println(MAPPER.writeValueAsString(report));
     }
 
